<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/input"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_margin="8dp">
        <EditText
            android:id="@+id/edittext_number1"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/textview_background"
            android:padding="8dp"
            android:autofillHints="number1"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:text="@string/zero"
            android:gravity="center"
            android:hint="@string/number1"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edittext_operation"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/textview_background"
            android:padding="8dp"
            android:autofillHints="operation"
            android:inputType="text"
            android:textColor="@color/white"
            android:hint="@string/operation"
            android:textSize="16sp"
            android:textColorHint="@color/white"
            android:gravity="center"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/edittext_number2"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/textview_background"
            android:padding="6dp"
            android:autofillHints="number"
            android:inputType="numberDecimal"
            android:textColor="@color/white"
            android:text="@string/zero"
            android:hint="@string/number2"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>

    <TextView
        android:id="@+id/textView_result"
        android:layout_width="320dp"
        android:layout_height="150dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        android:autofillHints="result"
        android:background="@drawable/textview_background"
        android:gravity="center"
        android:padding="20dp"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:weightSum="2">
        <Button
            android:id="@+id/btn_modules"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/modules"
            android:textSize="32sp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            style="@style/operation_Button"
            android:backgroundTint="@color/dark_pink"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_division"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/division"
            android:textSize="32sp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/dark_pink"
            style="@style/operation_Button"
            android:gravity="center"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp"
        android:weightSum="2">
        <Button
            android:id="@+id/btn_multiply"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            android:textSize="32sp"
            android:layout_marginEnd="8dp"
            android:backgroundTint="@color/dark_pink"
            style="@style/operation_Button"
            android:gravity="center"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_subtract"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/subtract"
            android:textSize="32sp"
            android:layout_marginStart="8dp"
            android:backgroundTint="@color/dark_pink"
            style="@style/operation_Button"
            android:gravity="center"
            android:layout_weight="1"/>

    </LinearLayout>
    <Button
        android:id="@+id/btn_add"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:textSize="32sp"
        android:layout_margin="8dp"
        android:backgroundTint="@color/dark_pink"
        style="@style/operation_Button"
        android:gravity="center" />


    <Button
        android:id="@+id/btn_equal"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/equal"
        android:textSize="32sp"
        android:layout_margin="8dp"
        android:backgroundTint="@color/dark_pink"
        style="@style/operation_Button"
        android:gravity="center" />




</LinearLayout>